# aibos_v6_vanilla

./: .coverage  .cursorrules  .dependency-cruiser.cjs  .dockerignore  .env.clean  .env.production  .eslintignore  .gitignore  .importlinter  .security-rules.yml  AIBOS_COMPLETE_ROUTE_MAP.md  AIBOS_Foundation.md  AIBOS_ROUTE_MAP.md  AIBOS_architecture.md  AVATAR_DROPDOWN_FIXES.md  BACKEND_MERGE_REPORT.md  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENHANCED_COMPONENTS_SUMMARY.md  GITHUB_PUSH_REPORT.md  LICENSE  MODULE_REORGANIZATION_SUMMARY.md  MULTICOMPANY_COMPLETION_ANALYSIS.md  Makefile  MultiCompany_Analysis_Report.md  ONLINE_DEPLOYMENT_GUIDE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  Quick Reference Command  README.md  SECURITY.md  STATUTORY_MAINTENANCE_OVERVIEW.md  SUPPORT.md  SUPPORT_SYSTEM_SUMMARY.md  TABBED_PROFILE_SYSTEM.md  WIP.md  bs_2023.txt  debug_example.py  (+35 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  update-readmes.yml  version-management.yml
apps/api-python/: package.json  pyproject.toml
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
config/: haproxy.cfg  security.py
config/governance/: 00_CONFIGURATION_SSOT.md  01_CONFIGURATION_AUDIT_REPORT.md  02_VERSION_DRIFT_AUDIT.md  03_COMPATIBILITY_ANALYSIS.md  04_FASTAPI_SSOT.md  05_FRONTEND_REACT_SSOT.md  06_DATABASE_SSOT.md  (+3 more)
docs/: ACCUFLOW_EXTENSION_GUIDE.md  AIBOS_vs_ZohoBooks_Accountant_Eval.md  API_DEVOPS_BLUEPRINT.md  DATABASE_SETUP_GUIDE.md  DATA_EXPORT.md  DEPLOYMENT_CHECKLIST.md  DISASTER_RECOVERY.md  DISTRIBUTED_SECURITY_SERVICES.md  MULTICURRENCY_SUPPORT.md  PAYMENT_GATEWAY_INTEGRATION.md  README_UPDATE_GUIDE.md  SUPPORT_SYSTEM_TESTING.md  TEAMS.md  TS_FIX_471_DETAILS.md  alignment_rules.md  api_contracts.md  architecture.md  business_rules.md  ci_cd.md  compliance.md  core_vs_module.md  data_migration.md  database.md  decision_log.md  deployment_zones.md  documentation_maintenance.md  enhanced_implementation.md  faq.md  github_copilot_goalkeeper.md  glossary.md  incident_response.md  localization.md  module_template.md  onboarding.md  onboarding_developer_guide.md  onboarding_enhancements_summary.md  onboarding_optimization.md  performance.md  security.md  style_guide.md  (+4 more)
examples/: journal_posting_multicurrency.py  journal_posting_with_audit.py
k8s/: security-services-deployment.yaml
migrations/: 0001_initial.py
scripts/: breaking-changes-tracker.py  deploy-staging-skip-db.cjs  deploy-staging.cjs  doc-sync.cjs  health_check.py  monitor-phase2.cjs  patch-manager.py  pre-commit-hook.sh  pre-push-validation.cjs  regulatory_monitor.py  rollback-manager.py  security-check.cjs  seed_demo_data.py  setup-database.js  setup_database.py  test-phase2.cjs  test-support-system.js  ts-hotfix.cjs  update-readme.py  update-task-list.js  verify-database.js  verify-merge-readiness.cjs  verify-phase1.cjs  verify-phase2.cjs  verify-production-readiness.cjs  version-manager.py
src/: App.tsx  main.tsx
supabase/: config.toml
tests/: audit.test.ts  test_api_endpoints.py
tools/: lint-imports.bat  lint-imports.sh
(+241 files in other folders)
